--- a/style.css
+++ b/style.css
@@ -28,6 +28,9 @@
   --btn-padding: 0.6rem 2rem;
   --search-padding: 0.6rem 1rem;
   --card-padding: 1rem;
+
+  --sticky-top-left: 5.4rem;
+  --sticky-top-right: -18rem;
 }
 
 body {
@@ -106,18 +109,49 @@ nav .search-bar {
 
 nav .search-bar input[type="search"] {
   background: transparent;
-  width: 30vw /* "vw" -> 30% of the width of the window */;
+  width: 30vw /* "vw=viewport width" -> 30% of the width of the window */;
   margin-left: 1rem;
   font-size: 0.9rem;
   color: var(--color-dark);
 }
 
-nav .search-bar input[type="search"]::placeholder{
-    color: var(--color-gray);
+nav .search-bar input[type="search"]::placeholder {
+  color: var(--color-gray);
 }
 
-nav .create{
+nav .create {
+  display: flex;
+  align-items: center;
+  gap: 2rem; /* gap indicates the space between the element of the container .create */
+}
+
+/*================= MAIN =================*/
+main {
+  position: relative;
+  top: 5.4rem; /*bring the hidden part of the main container which is under the nav bar to the canvas. Value 5.4 correspond to the sticky value of the LEFT container*/
+}
+
+main .container{
+    display: grid;
+    grid-template-columns: 18vw auto 20vw;
+    column-gap: 2rem;
+    position: relative;
+}
+
+/*==== LEFT ====*/
+main .container .left{
+    height: max-content;
+    position: sticky; /*scroll (relatively) until a limit is reached and stay fixed*/
+    position: -webkit-sticky; /* Safari */
+    top: var(--sticky-top-left);
+}
+
+main .container .left .profile {
     display: flex;
     align-items: center;
-    gap: 2rem; /* gap indicates the space between the element of the container .create */
+    column-gap: 1rem;
+    padding: var(--card-padding);
+    background: var(--color-white);
+    border-radius: var(--card-border-radius);
+    width: 100%;
 }
