--- a/style.css
+++ b/style.css
@@ -131,27 +131,80 @@ main {
   top: 5.4rem; /*bring the hidden part of the main container which is under the nav bar to the canvas. Value 5.4 correspond to the sticky value of the LEFT container*/
 }
 
-main .container{
-    display: grid;
-    grid-template-columns: 18vw auto 20vw;
-    column-gap: 2rem;
-    position: relative;
+main .container {
+  display: grid;
+  grid-template-columns: 18vw auto 20vw;
+  column-gap: 2rem;
+  position: relative;
 }
 
 /*==== LEFT ====*/
-main .container .left{
-    height: max-content;
-    position: sticky; /*scroll (relatively) until a limit is reached and stay fixed*/
-    position: -webkit-sticky; /* Safari */
-    top: var(--sticky-top-left);
+main .container .left {
+  height: max-content;
+  position: sticky; /*scroll (relatively) until a limit is reached and stay fixed*/
+  position: -webkit-sticky; /* Safari */
+  top: var(--sticky-top-left);
 }
 
 main .container .left .profile {
-    display: flex;
-    align-items: center;
-    column-gap: 1rem;
-    padding: var(--card-padding);
-    background: var(--color-white);
-    border-radius: var(--card-border-radius);
-    width: 100%;
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+  padding: var(--card-padding);
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  width: 100%;
+}
+
+/*--- SIDEBAR ---*/
+.left .sidebar {
+  margin-top: 1rem;
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+}
+
+.left .sidebar .menu-item {
+  display: flex;
+  align-items: center;
+  height: 4rem;
+  cursor: pointer;
+  transition: all 300ms ease;
+  position: relative;
+}
+
+.left .sidebar .menu-item:hover {
+  background: var(--color-light);
+}
+
+.left .sidebar i {
+  font-size: 1.4rem; /*size of the icons in the sidbar*/
+  color: var(--color-gray);
+  margin-left: 2rem;
+  position: relative; /*relative because we want to position the notification count as absolute relative to the i tag (icons)*/
+}
+
+.left .sidebar i .notification-count {
+  background: var(--color-danger);
+  color: white;
+  font-size: 0.7rem;
+  width: fit-content;
+  border-radius: 0.8rem;
+  padding: 0.1rem 0.4rem;
+  position: absolute;
+  top: -0.2rem;
+  right: -0.3rem;
+}
+
+.left .sidebar h3 {
+  margin-left: 1.5rem;
+  font-size: 1rem;
+}
+
+.left .sidebar .active {
+  background: var(--color-light);
+}
+
+.left .sidebar .active i,
+.left .sidebar .active h3 {
+  color: var(--color-primary);
 }
