style left create button

--- a/style.css
+++ b/style.css
@@ -228,3 +228,10 @@ main .container .left .profile {
     border-bottom-left-radius:var(--card-border-radius);
     overflow: hidden; 
    } REPLACED WITH OVERFLOW HIDDEN IN THE SIDEBAR STYLE */
+
+.left .btn {
+    margin-top: 1rem;
+    width: 100%;
+    text-align: center;
+    padding: 1rem 0rem;
+}
