--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ main .container .left .profile {
   margin-top: 1rem;
   background: var(--color-white);
   border-radius: var(--card-border-radius);
-  overflow: hidden;
+  /*overflow: hidden; WE CANNOT USE OVERFLOW HIDDEN HERE BECAUSE I WILL PREVENT THE NOTIFICATION COMPONENT TO BE DISPLAYED*/
 }
 
 .left .sidebar .menu-item {
@@ -219,19 +219,54 @@ main .container .left .profile {
   background: var(--color-primary);
 }
 
-/* .left .sidebar .menu-item:first-child.active {
-   border-top-left-radius: var(--card-border-radius);
-   overflow: hidden; 
-  }
+.left .sidebar .menu-item:first-child.active {
+  border-top-left-radius: var(--card-border-radius);
+  overflow: hidden;
+}
 
-  .left .sidebar .menu-item:last-child .active {
-    border-bottom-left-radius:var(--card-border-radius);
-    overflow: hidden; 
-   } REPLACED WITH OVERFLOW HIDDEN IN THE SIDEBAR STYLE */
+.left .sidebar .menu-item:last-child .active {
+  border-bottom-left-radius: var(--card-border-radius);
+  overflow: hidden;
+}
 
 .left .btn {
-    margin-top: 1rem;
-    width: 100%;
-    text-align: center;
-    padding: 1rem 0rem;
+  margin-top: 1rem;
+  width: 100%;
+  text-align: center;
+  padding: 1rem 0rem;
+}
+
+/*--- NOTIFICATION POPUP ---*/
+.left .notification-popup {
+  position: absolute;
+  top: 0;
+  left: 110%;
+  width: 30rem;
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+  box-shadow: 0 0 2rem hsl(var(--color-primary), 75%, 60% 25%);
+  z-index: 8;
+}
+
+.left .notification-popup::before {
+  content: "";
+  display: block;
+  width: 1.2rem;
+  height: 1.2rem;
+  background: white;
+  position: absolute;
+  left: -0.6rem;
+  transform: rotate(45deg);
+}
+
+.left .notification-popup > div { /* ">" means direct div element */
+    display: flex;
+    align-items: flex-start;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.left .notification-popup small {
+    display: block;
 }
