--- a/style.css
+++ b/style.css
@@ -261,13 +261,83 @@ main .container .left .profile {
   transform: rotate(45deg);
 }
 
-.left .notification-popup > div { /* ">" means direct div element */
-    display: flex;
-    align-items: flex-start;
-    gap: 1rem;
-    margin-bottom: 1rem;
+.left .notification-popup > div {
+  /* ">" means direct div element */
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+  margin-bottom: 1rem;
 }
 
 .left .notification-popup small {
-    display: block;
+  display: block;
+}
+
+/*==== MIDDLE ====*/
+
+/*--- STORIES ---*/
+.middle .stories {
+  display: flex;
+  justify-content: space-between;
+  height: 12rem;
+  gap: 0.5rem;
+}
+
+.middle .stories .story {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  font-size: 0.75rem;
+  width: 100%;
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  position: relative;
+  overflow: hidden;
+}
+
+.middle .stories .story::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 5rem;
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.75));
+  position: absolute;
+  bottom: 0;
+}
+
+.middle .stories .story .name {
+  z-index: 2; /*so that the name is displayed on top of the before component of the story which is absolute (~floating) */
+}
+
+.middle .stories .story:nth-child(1) {
+  background: url("./images/story-1.jpg") no-repeat center center/cover; /*center/cover fits the entire image in the container*/
+}
+
+.middle .stories .story:nth-child(2) {
+  background: url("./images/story-2.jpg") no-repeat center center/cover; /*center/cover fits the entire image in the container*/
+}
+
+.middle .stories .story:nth-child(3) {
+  background: url("./images/story-3.jpg") no-repeat center center/cover; /*center/cover fits the entire image in the container*/
+}
+
+.middle .stories .story:nth-child(4) {
+  background: url("./images/story-4.jpg") no-repeat center center/cover; /*center/cover fits the entire image in the container*/
+}
+
+.middle .stories .story:nth-child(5) {
+  background: url("./images/story-5.jpg") no-repeat center center/cover; /*center/cover fits the entire image in the container*/
+}
+
+.middle .stories .story:nth-child(6) {
+  background: url("./images/story-6.jpg") no-repeat center center/cover; /*center/cover fits the entire image in the container*/
+}
+
+.middle .stories .story .profile-picture {
+  width: 2rem;
+  height: 2rem;
+  border: 3px solid var(--color-primary);
+  align-self: flex-start;
 }
