--- a/style.css
+++ b/style.css
@@ -341,3 +341,23 @@ main .container .left .profile {
   border: 3px solid var(--color-primary);
   align-self: flex-start;
 }
+
+/*--- CREATE POST ---*/
+.middle .create-post {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1rem;
+  background: var(--color-white);
+  padding: 0.4rem var(--card-padding);
+  border-radius: var(--border-radius);
+}
+
+.middle .create-post input[type="text"] {
+  width: 100%;
+  justify-self: start;
+  padding-left: 1rem;
+  background: transparent;
+  color: var(--color-dark);
+  margin-right: 1rem;
+}
