add style to friend requests

--- a/style.css
+++ b/style.css
@@ -426,6 +426,8 @@ main .container .right {
   bottom: 0;
 }
 
+/*----- MESSAGES -----*/
+
 .right .messages {
   background: white;
   border-radius: var(--card-border-radius);
@@ -466,6 +468,10 @@ main .container .right {
     border-color: var(--color-dark);
 }
 
+.right .messages .message-requests{
+    color: var(--color-primary);
+}
+
 .right .messages .message {
     display: flex;
     gap: 1rem;
@@ -500,3 +506,37 @@ main .container .right {
     bottom: 0;
     right: 0;
 }
+
+
+/*----- FRIENDS REQUESTS -----*/
+.right .friend-requests{
+    margin-top: 1rem;
+}
+
+.right .friend-requests h4{
+    color: var(--color-gray);
+    margin: 1rem 0;
+}
+
+.right .request {
+    background: white;
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    margin-bottom: 0.7rem;
+}
+
+.right .request .info {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.right .request .action {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
+
+
