--- a/style.css
+++ b/style.css
@@ -247,7 +247,6 @@ main .container .left .profile {
   padding: var(--card-padding);
   box-shadow: 0 0 2rem hsl(var(--color-primary), 75%, 60% 25%);
   z-index: 8;
-  display: none;
 }
 
 .left .notification-popup::before {
@@ -688,44 +687,95 @@ main .container .right {
 }
 
 .customize-theme .choose-bg > div span {
-    width: 2rem;
-    height: 2rem;
-    border: 2px solid var(--color-gray);
-    border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+  border: 2px solid var(--color-gray);
+  border-radius: 50%;
 }
 
 /*========================== 
 MEDIA QUERIES FOR SMAL LAPTOPS AND BIG TABLETS  
 ========================
 */
-@media screen and (max-width: 1200px){
-    .container{
-        width: 96%;
-    }
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 96%;
+  }
 
-    main .container {
-        grid-template-columns: 5rem auto 30vw;
-        gap: 1rem;
-    }
+  main .container {
+    grid-template-columns: 5rem auto 30vw;
+    gap: 1rem;
+  }
 
-    main .container .left {
-        width: 5rem;
-        z-index: 5; /*de telle sorte qu'il soit au dessus de tous les autre compartiments (middle, right, navbar)*/
-    }
+  main .container .left {
+    width: 5rem;
+    z-index: 5; /*de telle sorte qu'il soit au dessus de tous les autre compartiments (middle, right, navbar)*/
+  }
 
-    main .container .left .profile {
-        display: none;
-    }
+  main .container .left .profile {
+    display: none;
+  }
 
-    main .container .left .sidebar h3 {
-        display: none;
-    }
+  main .container .left .sidebar h3 {
+    display: none;
+  }
 
-    main .container .left .btn{
-        display: none;
-    }
+  main .container .left .btn {
+    display: none;
+  }
 }
 
+/*========================== 
+MEDIA QUERIES FOR SMALL TABLETS AND MOBILE PHONES  
+========================
+*/
+@media screen and (max-width: 992px) {
+  nav .search-bar {
+    display: none;
+  }
 
+  main .container {
+    grid-template-columns: 0 auto 5rem;
+  }
 
+  main .container .left {
+    /*
+            in the grid system the first column/row has value 1 and the last has value n+3
+            in our case 
+            LEFT is the first column with value 1
+            MIDDLE is the second column with value 3
+            RIGHT is the third column with value 3
+            LAST(GOST COLUMN) has value 4
+            So when we say grid-column:3/4 on the LEFT column we are pushing this column from value 1 to 3 which will replace the RIGHT column
+        */
+    grid-column: 3/4; /*no needed infact because of the positon fixed (floating)*/
+    position: fixed;
+    bottom: 0;
+    right: 0;
+  }
 
+  main .container .left .notification-popup {
+    position: absolute;
+    left: -20rem;
+    width: 20rem;
+  }
+
+  main .container .left .notification-popup::before {
+    position: absolute;
+    top: 1.3rem;
+    left: calc(20rem - 0.6rem);
+    display: block;
+  }
+
+  main .container .left .sidebar > div h3 {
+    display: none;
+  }
+
+  main .container .middle{
+    grid-column: 1/3;/*??actually not needed because we have a container with LEFT "0" in the grid template column*/
+  }
+
+ main .container .right{
+    display: none;
+ }
+}
