--- a/style.css
+++ b/style.css
@@ -704,7 +704,6 @@ MEDIA QUERIES FOR SMAL LAPTOPS AND BIG TABLETS
 
   main .container {
     grid-template-columns: 5rem auto 30vw;
-    gap: 1rem;
   }
 
   main .container .left {
@@ -736,6 +735,7 @@ MEDIA QUERIES FOR SMALL TABLETS AND MOBILE PHONES
 
   main .container {
     grid-template-columns: 0 auto 5rem;
+    gap: 0;
   }
 
   main .container .left {
