add javascript for displaying theme customization modal

--- a/style.css
+++ b/style.css
@@ -537,7 +537,7 @@ main .container .right {
   gap: 1rem;
 }
 
-/*========================== END OF THEME CUSTOMIZATION  ========================*/
+/*========================== CUSTOMIZATION  ========================*/
 .customize-theme {
   background: rgba(
     255,
