add javascript for closing theme customization modal

--- a/style.css
+++ b/style.css
@@ -563,6 +563,7 @@ main .container .right {
   padding: 3rem;
   border-radius: var(--card-border-radius);
   width: 50%;
+  box-shadow: 0 0 1rem var(--color-primary);
 }
 
 /*---------------- FONT SIZES -------------*/
@@ -723,6 +724,10 @@ MEDIA QUERIES FOR SMAL LAPTOPS AND BIG TABLETS
   main .container .left .btn {
     display: none;
   }
+
+  .customize-theme .card {
+    width: 80vw;
+  }
 }
 
 /*========================== 
@@ -775,4 +780,8 @@ MEDIA QUERIES FOR SMALL TABLETS AND MOBILE PHONES
  main .container .right{
     display: none;
  }
+
+ .customize-theme .card {
+    width: 92vw;
+  }
 }
