--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@
 }
 
 :root {
+  --primary-color-hue: 252;
   --color-white: hsl(252, 30%, 100%);
   --color-light: hsl(252, 30%, 95%);
   --color-gray: hsl(252, 15%, 65%);
-  --color-primary: hsl(252, 75%, 60%);
+  --color-primary: hsl(var(--primary-color-hue), 75%, 60%);
   --color-secondary: hsl(252, 100%, 90%);
   --color-success: hsl(120, 95%, 65%);
   --color-danger: hsl(0, 95%, 65%);
@@ -595,7 +596,7 @@ main .container .right {
   height: 1rem;
   background: var(--color-secondary);
   border-radius: 50%;
-  cursor: pointer; 
+  cursor: pointer;
 }
 
 .customize-theme .choose-size span.active {
@@ -620,6 +621,7 @@ main .container .right {
   width: 2.2rem;
   height: 2.2rem;
   border-radius: 50%;
+  cursor: pointer;
 }
 
 /*
@@ -774,15 +776,15 @@ MEDIA QUERIES FOR SMALL TABLETS AND MOBILE PHONES
     display: block;
   }
 
-  main .container .middle{
+  main .container .middle {
     grid-column: 1/3;
   }
 
- main .container .right{
+  main .container .right {
     display: none;
- }
+  }
 
- .customize-theme .card {
+  .customize-theme .card {
     width: 92vw;
   }
 }
