--- a/style.css
+++ b/style.css
@@ -14,14 +14,18 @@
 
 :root {
   --primary-color-hue: 252;
-  --color-white: hsl(252, 30%, 100%);
-  --color-light: hsl(252, 30%, 95%);
+  --dark-color-lightness: 17%;
+  --light-color-lightness: 95%;
+  --white-color-lightness: 100%;
+
+  --color-white: hsl(252, 30%, var(--white-color-lightness));
+  --color-light: hsl(252, 30%, var(--light-color-lightness));
   --color-gray: hsl(252, 15%, 65%);
   --color-primary: hsl(var(--primary-color-hue), 75%, 60%);
   --color-secondary: hsl(252, 100%, 90%);
   --color-success: hsl(120, 95%, 65%);
   --color-danger: hsl(0, 95%, 65%);
-  --color-dark: hsl(252, 30%, 17%);
+  --color-dark: hsl(252, 30%, var(--dark-color-lightness));
   --color-black: hsl(252, 30%, 10%);
 
   --border-radius: 2rem;
@@ -430,7 +434,7 @@ main .container .right {
 /*----- MESSAGES -----*/
 
 .right .messages {
-  background: white;
+  background: var(--color-white);
   border-radius: var(--card-border-radius);
   padding: var(--card-padding);
 }
@@ -519,7 +523,7 @@ main .container .right {
 }
 
 .right .request {
-  background: white;
+  background: var(--color-white);
   padding: var(--card-padding);
   border-radius: var(--card-border-radius);
   margin-bottom: 0.7rem;
