--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ main .container .left .profile {
   display: block;
   width: 1.2rem;
   height: 1.2rem;
-  background: white;
+  background: var(--color-white);
   position: absolute;
   left: -0.6rem;
   transform: rotate(45deg);
